Fix bug #24773 (unset()ing string offsets crashes PHP)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@145474 c90b9560-bf6c-de11-be94-00142212c4b1